<resources>
    <string name="app_name">App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_first_name">First name</string>
    <string name="action_sign_up">Sign up</string>
    <string name="loginTV">Login</string>
    <string name="Account">Account</string>
    <string name="loginPage">login</string>
    <string name="registrationPage">registration</string>
    <string name="profileView">Profile</string>
    <string name="eventBT">Event</string>
    <string name="phoneBT">Phone</string>
    <string name="usernameBT">Username</string>
    <string name="passwordBT">Password</string>
    <string name="emailAddressBT">Email Address</string>
    <string name="individualResumeBT">Individual Resume</string>
    <string name="settingView">Setting</string>
    <string name="NotificationBT">Notification</string>
    <string name="dataStorageBT">Data Storage</string>
    <string name="privacySecurityBT">Privacy Security</string>
    <string name="FeedbackBT">Feedback</string>
    <string name="LogoutBT">Log out</string>
</resources>