<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:padding="30dp">

            <ImageView
                android:id="@+id/UserIconBT"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_baseline_account_circle_24" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/profileView"
            android:textSize="20sp" />

        <Button
            android:id="@+id/MyEventBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/eventBT" />

        <Button
            android:id="@+id/MyPhoneBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/phoneBT" />

        <Button
            android:id="@+id/UserNameBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/usernameBT" />

        <Button
            android:id="@+id/PasswordBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/passwordBT" />

        <Button
            android:id="@+id/EmailAddressBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/emailAddressBT" />

        <Button
            android:id="@+id/IndividualResumeBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/individualResumeBT" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/settingView"
            android:textSize="20sp" />

        <Button
            android:id="@+id/NotificationBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/NotificationBT" />

        <Button
            android:id="@+id/DataStorageBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/dataStorageBT" />

        <Button
            android:id="@+id/PrivacySecurityBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/privacySecurityBT" />

        <Button
            android:id="@+id/FeedbackBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/FeedbackBT" />

        <Button
            android:id="@+id/LogoutBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/LogoutBT" />

    </LinearLayout>

</ScrollView>