<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/SUsernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="text" />

        <EditText
            android:id="@+id/SPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ConfirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/NameET"
            android:hint="@string/prompt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/PhoneET"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/prompt_last_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/prompt_first_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/RegisterBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/action_sign_up" />

        <TextView
            android:text="@string/loginTV"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>