<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/LoginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Account"
        android:textSize="34sp"
        android:layout_marginTop="34sp"
        android:layout_gravity="center"/>

    <TableLayout
        android:stretchColumns="0,1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/LoginViewBT"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/loginPage" />

            <Button
                android:id="@+id/RegistrationViewBT"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/registrationPage" />

        </TableRow>

    </TableLayout>

    <FrameLayout
        android:id="@+id/Account"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>